public_html/css/compiled/app.css
/* ... */
.admin-dashboard__section-title {
  margin: 0 0 4rem 0; }

.admin-dashboard__job-poster-title {
  color: #2196f3;
  font-weight: 700; }

.admin-dashboard__job-poster-list {
  padding: 0; }

.admin-dashboard__job-poster hr {
  background: #a3a3a3;
  border: none;
  height: 1px;
  width: 100%; }

/* =============================================================================

    Authored by: Talent Cloud

    Manager: Create Job Poster

============================================================================= */
/* =============================================================================

    Authored by: Talent Cloud

    Manager: Create Job Poster - Open Ended Questions

============================================================================= */
.job-poster__open-questions {
  text-align: center; }

.job-poster__open-question-section-label {
  font-size: 22px;
  font-weight: 800;
  margin: 2rem 0 0 0;
  text-align: left;
  color: #2196f3; }

.job-poster__open-question {
  margin: 3rem -1rem 0 -1rem;
  text-align: left;
  width: 100%; }
  .job-poster__open-question:nth-child(2) {
    margin-top: -2rem; }
  .job-poster__open-question .box {
    padding: 0 1rem; }

.job-poster__open-question-label {
  color: #333333;
  display: block;
  font-size: 20px;
  font-weight: 800;
  margin: 2rem 0;
  text-align: left; }

.job-poster__open-question-remove-button {
  appearance: none;
  background: none;
  border: none;
  color: #2196f3;
  font-size: 18px;
  font-weight: 400;
  line-height: 1;
  float: right;
  margin: 3rem 0 0 0;
  padding: 0;
  text-decoration: underline;
  transition: color .2s ease; }
  .job-poster__open-question-remove-button:hover {
    color: #125184;
    transition: color .2s ease; }

[class^="job-poster__open-question-wrapper--"] label {
  display: block; }

[class^="job-poster__open-question-wrapper--"] input {
  display: block;
  width: 100%; }

[class^="job-poster__open-question-wrapper--"] textarea {
  display: block;
  width: 100%; }

[class^="job-poster__open-question-wrapper--"] .form__input-wrapper--float:first-of-type {
  margin-top: 0; }

.job-poster__open-question-wrapper-label {
  font-size: 18px;
  font-weight: 800; }

.job-poster__open-questions-add-button {
  margin: 4rem 0 0 0; }

